--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curriculo</title>
+    <title>Linus Torvalds</title>
     <style type="text/css">
     body{
         background: #282a36;
@@ -13,12 +13,15 @@
       }
       h1{
         color: #ff79c6;
+        font-family: Arial, Helvetica, sans-serif;
       }
       h2{
         color: #bd93f9;
+        font-family: Arial, Helvetica, sans-serif;
       }
       h3{
         color: #8be9fd;
+        font-family: Arial, Helvetica, sans-serif;
       }
       hr{
         background: #ff79c6;
@@ -28,38 +31,45 @@
 </head>
 
 <body>
-    <h1>Rose Azure</h1>
+  <center>
+    <h1>Linus Torvalds</h1>
     <hr>
-    <h2> Contato</h2>
-    <ul>
-        <li>roseazure@protonmail.com</li>
-        <li>(19)999682593</li>
-        <li>Campinas / SP </li>
-    </ul>
-    <h2> Objetivo</h2>
-    <h3>Trabalhar com Segurança da Informação Blue Hat & T.I avançado. </h3>
-    <h2>Formação</h2>
-    <ul>
-        <li> Segurança da Informação na SABESP<em> (pretendido) </em></li>
-        <li>Ensino Médio <strong> (completo) </strong></li>
-    </ul>
-    <h2>Cursos Complementares</h2>
-    <ul>
-        <li>Habilitação profissional Técnica de Nível Médio em Informática para Internet SENAC <strong> (completo)
-            </strong></li>
-        <li>Manutenção de Workstations e Laptops <strong> (completo) </strong></li>
-        <li>Curso de Segurança da Informação e Hacking XPSec <strong> (cursando) </strong></li>
-        <li>Curso de Inglês Wizard <strong> (completo) </strong></li>
-    </ul>
-    <h2>Redes Sociais</h2>
-    <ul>
-        <li>azrscorp.carrd.co</li>
-        <li>youtube.com/channel/UCgKvysxnZ2ttbSSqqeinG4A</li>
-        <li>roseazure.bandcamp.com</li>
-        <li>facebook.com/moises.orivaldo.56</li>
-        <li>instagram.com/_satanophobia</li>
-        <li>linkedin.com/in/rose-azure-043420226</li>
-    </ul>
-</body>
-
+    <h2> Quem é Linus Torvalds?</h2>
+    <h4> Linus Benedict Torvalds é um engenheiro de software muito conhecido, nascido na finlândia e formado na Universidade de Helsínquia.
+      <h4> Ele criou o kernel Linux utilizado em sistemas Linux, Android, e ChromeOS. Também desenvolveu o Git, um sistema de controle de versão e código aberto. </h4>
+      <h2>Fotos</h2>
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/52/LinuxCon_Europe_Linus_Torvalds_03.jpg/1200px-LinuxCon_Europe_Linus_Torvalds_03.jpg"
+           width="330" 
+     height="500">
+      <img src="https://cdn.britannica.com/99/124299-050-4B4D509F/Linus-Torvalds-2012.jpg"
+           width="330" 
+     height="500">
+      <img src="https://www.nndb.com/people/444/000022378/linus-torvalds.jpg"
+           width="330" 
+     height="500">
+           <h2> Conquistas</h2>
+    <h3>Linus Torvalds começou sua famosa carreira em 1991, onde criou o sistema Linux, inspirado no antigo MINIX, que era um tanto quanto diferente. </h3>
+      <h4>Em 1997, Linus ganhou seu prímeiro prémio, pela Nokia Foundation, logo depois, um Lifetime Achievement Award at Uniforum Pictures. </h4>
+  <h4> Os primeiros protótipos do Linux foram publicados ainda em 1991, e a versão 1.0, em 14 de março de 1994. A convite de seu colega que também fala sueco, estudante de ciências da computação, Lars Wirzenius, Linus participa de uma palestra gratuita em 1991, do renomado ativista de software livre, Richard Stallman, conhecendo assim, o Projeto GNU, e publicando mais tarde o núcleo Linux sob licença GNU General Public License, versão 2 (GPLv2). </h4>
+    <h2>Reconhecimento público</h2>
+        <li> A revista Time o reconheceu diversas vezes: Em 2000, ele foi ranqueado como 17.º na Time 100: The Most Important People of the Century. Em 2004, nomeado como uma das mais influentes pessoas do mundo. Em 2006, a versão europeia o nomeou como um dos heróis revolucionários dos últimos sessenta anos.</li>
+      <li> </li>
+        <li>InfoWorld lhe concedeu o Prêmio pelas Realizações Industriais de 2000.</li>
+      <li> </li>
+      <li>No verão de 2004, os telespectadores da YLE (a companhia de transmissão pública da Finlândia), colocaram Torvalds em 16º, entre os 100 maiores finlandeses.</li>
+      <li> </li>
+      <li> Em 11 de outubro de 2017, a companhia SUSE fez uma música chamada: Linus Said. </li>
+    <h2>Vida pessoal</h2>
+    <h4> Linus Torvalds é casado com Tove Torvalds, hexacampeã nacional de karatê na Finlândia, a qual ele conheceu no outono de 1993. Linus passava exercícios introdutórios no laboratório de informática para os alunos, e solicitou aos participantes do curso que lhe enviassem um e-mail como teste, no qual ela o convidou para saírem em um primeiro encontro. Mais tarde, Linus e Tove se casaram e tiveram três filhas: Patricia Miranda (nascida em 1996), Daniela Yolanda (nascida em 1998), e Celeste Amanda (nascida em 2000), das quais duas nasceram nos Estados Unidos da América. Linus usa suas datas de nascimento (em hexadecimal) como aceitáveis números mágicos na chamada de reinicialização do núcleo. </h4>
+      <h4> Em 2010, Torvalds tornou-se cidadão estado-unidense, e se registrou para votar no país. </h4>
+    <h2>Entrevistas & vídeos</h2>
+      <iframe width="420" height="315"
+src="https://www.youtube.com/embed/o8NPllzkFhE">
+        </iframe>
+        <iframe width="420" height="315"
+src="https://www.youtube.com/embed/4XpnKHJAok8">
+          </iframe>
+          <iframe width="420" height="315"
+src="https://www.youtube.com/embed/mysM-V5h9z8">
+            </iframe>
 </html>
