--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
         background: #ff79c6;
         height: 3px;
       }
+      h4{
+        color: #cccccc;
+        font-family: Arial, Helvetica, sans-serif;
+      }
     </style>
 </head>
 
