Biografia (Ultima correção, assim espero.)

--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
         color: #cccccc;
         font-family: Arial, Helvetica, sans-serif;
       }
+    }
+      li{
+        color: #cccccc;
+        font-family: Arial, Helvetica, sans-serif;
     </style>
 </head>
 
@@ -56,13 +60,10 @@
       <h4>Em 1997, Linus ganhou seu prímeiro prémio, pela Nokia Foundation, logo depois, um Lifetime Achievement Award at Uniforum Pictures. </h4>
   <h4> Os primeiros protótipos do Linux foram publicados ainda em 1991, e a versão 1.0, em 14 de março de 1994. A convite de seu colega que também fala sueco, estudante de ciências da computação, Lars Wirzenius, Linus participa de uma palestra gratuita em 1991, do renomado ativista de software livre, Richard Stallman, conhecendo assim, o Projeto GNU, e publicando mais tarde o núcleo Linux sob licença GNU General Public License, versão 2 (GPLv2). </h4>
     <h2>Reconhecimento público</h2>
-        <li> A revista Time o reconheceu diversas vezes: Em 2000, ele foi ranqueado como 17.º na Time 100: The Most Important People of the Century. Em 2004, nomeado como uma das mais influentes pessoas do mundo. Em 2006, a versão europeia o nomeou como um dos heróis revolucionários dos últimos sessenta anos.</li>
-      <li> </li>
-        <li>InfoWorld lhe concedeu o Prêmio pelas Realizações Industriais de 2000.</li>
-      <li> </li>
-      <li>No verão de 2004, os telespectadores da YLE (a companhia de transmissão pública da Finlândia), colocaram Torvalds em 16º, entre os 100 maiores finlandeses.</li>
-      <li> </li>
-      <li> Em 11 de outubro de 2017, a companhia SUSE fez uma música chamada: Linus Said. </li>
+<h4>A revista Time o reconheceu diversas vezes: Em 2000, ele foi ranqueado como 17.º na Time 100: The Most Important People of the Century. Em 2004, nomeado como uma das mais influentes pessoas do mundo. Em 2006, a versão europeia o nomeou como um dos heróis revolucionários dos últimos sessenta anos.</h4>
+    <h4>InfoWorld lhe concedeu o Prêmio pelas Realizações Industriais de 2000.</h4>
+    <h4>No verão de 2004, os telespectadores da YLE (a companhia de transmissão pública da Finlândia), colocaram Torvalds em 16º, entre os 100 maiores finlandeses.</h4>
+<h4>Em 11 de outubro de 2017, a companhia SUSE fez uma música chamada: Linus Said. </h4>
     <h2>Vida pessoal</h2>
     <h4> Linus Torvalds é casado com Tove Torvalds, hexacampeã nacional de karatê na Finlândia, a qual ele conheceu no outono de 1993. Linus passava exercícios introdutórios no laboratório de informática para os alunos, e solicitou aos participantes do curso que lhe enviassem um e-mail como teste, no qual ela o convidou para saírem em um primeiro encontro. Mais tarde, Linus e Tove se casaram e tiveram três filhas: Patricia Miranda (nascida em 1996), Daniela Yolanda (nascida em 1998), e Celeste Amanda (nascida em 2000), das quais duas nasceram nos Estados Unidos da América. Linus usa suas datas de nascimento (em hexadecimal) como aceitáveis números mágicos na chamada de reinicialização do núcleo. </h4>
       <h4> Em 2010, Torvalds tornou-se cidadão estado-unidense, e se registrou para votar no país. </h4>
